--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,4 +4,6 @@
     --Primary-200:#8973E9;
     --Grey-10:#F5F6F9;
     --Secondary-200:#FEA32B;
+    --Primary-50:#F1EEFC;
+    --Primary-300:#7156E5;
   }
